# TaikoArcadeLoader

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  PLUGINS.md  README.md  exports.def  logger.cpp  meson.build  res.patch
.github/workflows/: build.yml
src/: banner.cpp  banner.h  bnusio.cpp  bnusio.h  config.cpp  config.h  configValidator.cpp  constants.h  dllmain.cpp  helpers.cpp  helpers.h  logger.cpp  logger.h  poll.cpp  poll.h  pollasync.cpp  polldef.h
src/Windows/: ExpectedError.h  MinimumLatencyAudioClient.cpp  MinimumLatencyAudioClient.h  WindowsError.h
src/patches/: amauth.cpp  audio.cpp  cn_jun_2023.cpp  dxgi.cpp  fpslimiter.cpp  jp_apr_2023.cpp  jp_nov_2020.cpp  language.cpp  layeredfs.cpp  patches.h  plugins.cpp  qr.cpp  scanner.cpp  testmode.cpp  timer.cpp  wordlist.cpp
src/patches/versions/: CHN00.cpp  JPN00.cpp  JPN08.cpp  JPN39.cpp
subprojects/: libtomcrypt.wrap  minhook.wrap  pugixml.wrap  safetyhook.wrap  stb.wrap  tomlc99.wrap  zlib.wrap  zxing.wrap
subprojects/packagefiles/: libtomcrypt.patch  minhook.patch  safetyhook.patch  tomlc99.patch  zlib.patch
subprojects/packagefiles/stb/: meson.build
